--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1 align="center" style='color:purple; font-size:82px;'> Trevon Diggs makes it clear that his brother, Stefon,
+    <h1 align="center" style='color:rgb(0, 2, 128); font-size:82px;'>Trevon Diggs makes it clear that his brother, Stefon,
         should leave Buffalo!</h1>
 
     <div style="width:60%; margin:auto;">
